modified reset password form

--- a/src/main/resources/templates/reset_password_form.html
+++ b/src/main/resources/templates/reset_password_form.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Reset password form</title>
+    <script type="text/javascript" th:src="@{/JavaScript/Password.js}"></script>
 </head>
 <body>
 <div>
@@ -19,12 +20,15 @@
             </p>
             <p>
                 <label>
-                    <input type="password"  placeholder="Confirm your new password"
-                           required oninput="checkPasswordMatch(this);" />
+                    <input type="password"  name="confirm password" placeholder= "Confirm your new password" required oninput="comparePassword(this);" />
                 </label>
+
             </p>
+            <div th:if="${message != null}">
+                <p class="text-warning">[[${message}]]</p>
+            </div>
             <p >
-                <input type="submit" value="Change Password" class="btn btn-primary" />
+                <input type="submit" value="Change Password"  />
             </p>
         </div>
 </form>
