--- a/src/main/resources/templates/Forgot_Password_Form.html
+++ b/src/main/resources/templates/Forgot_Password_Form.html
@@ -9,7 +9,7 @@
     Forget Password Form
 </div>
 
-    <form  th:action="@{/Forget_Password}"  method="post" >
+    <form  th:action="@{/Forgot_Password}"  method="post" >
             <div>
                 <p>We will be sending a reset password link to your email.</p>
             </div>
