--- a/src/main/resources/templates/reset_password_form.html
+++ b/src/main/resources/templates/reset_password_form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Reset password form</title>
@@ -10,7 +10,7 @@
     <h2>Reset Password Form</h2>
 </div>
 
-<form th:action="@{/reset_password_form}" method="post">
+<form th:action="@{/Reset_Password_Form}" method="post">
     <input type="hidden" name="token" th:value="${token}"/>
         <div>
             <p>
