--- a/src/main/resources/templates/reset_password_form.html
+++ b/src/main/resources/templates/reset_password_form.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
     <meta charset="UTF-8">
     <title>Reset password form</title>
-    <script type="text/javascript" th:src="@{/JavaScript/Password.js}"></script>
+    <script type="text/javascript" th:src="@{/js/Password.js}"></script>
 </head>
 <body>
 <div>
     <h2>Reset Password Form</h2>
 </div>
 
-<form th:action="@{/Reset_Password_Form}" method="post">
+<form th:action="@{/reset_password}" method="post">
     <input type="hidden" name="token" th:value="${token}"/>
         <div>
             <p>
                 <label>
-                    <input type="password" name="password" th:value="${password}" placeholder="Enter password" required/>
+                    <input type="password" id="pw" name="password" th:value="${password}" placeholder="Enter password" required/>
                 </label>
             </p>
             <p>
                 <label>
-                    <input type="password"  name="confirm password" placeholder= "Confirm your new password" required oninput="comparePassword(this);" />
+                    <input type="password" id="confpw"  name="confirm password" placeholder= "Confirm your new password" required oninput="comparePassword(this);" />
                 </label>
 
             </p>
@@ -28,7 +29,7 @@
                 <p class="text-warning">[[${message}]]</p>
             </div>
             <p >
-                <input type="submit" value="Change Password"  />
+                <input type="submit" value="Change Password"/>
             </p>
         </div>
 </form>
