--- a/src/main/resources/templates/Forgot_Password_Form.html
+++ b/src/main/resources/templates/Forgot_Password_Form.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
     <meta charset="UTF-8">
     <title>Forget Password Form</title>
@@ -9,7 +10,7 @@
     Forget Password Form
 </div>
 
-    <form  th:action="@{/Forgot_Password}"  method="post" >
+    <form  th:action="@{/forgot_password}"  method="post" >
             <div>
                 <p>We will be sending a reset password link to your email.</p>
             </div>
