Renamed template names

--- a/src/main/resources/templates/verification_form.html
+++ b/src/main/resources/templates/verification_form.html
@@ -11,7 +11,7 @@
     <h2>User Varification Form</h2>
 </div>
 
-<form th:action="@{/Varification_Form}" method="post">
+<form th:action="@{/verification_form}" method="post">
     <input type="hidden" name="token" th:value="${token}"/>
     <div>
         <p>
