--- a/src/main/resources/templates/user_registration_form.html
+++ b/src/main/resources/templates/user_registration_form.html
@@ -7,7 +7,7 @@
 <body>
 <div>
     <h1>User Registration</h1>
-    <form th:action="@{/user_regestration_form}" method="post" th:object="${user}">
+    <form th:action="@{/user_registration_form}" method="post" th:object="${user}">
         <label>Full name:</label>
         <input type="text" th:field="*{name}" placeholder="Enter name"/><br /><br />
 
