changed input type in add facility form

--- a/src/main/resources/templates/addFacility.html
+++ b/src/main/resources/templates/addFacility.html
@@ -37,9 +37,9 @@
                 type="text"
                 name="timeSlot"
         /><br/><br/>
-        <input type="radio" name="active"/>
+        <input type="checkbox" name="active"/>
         <label>Active</label><br/><br/>
-        <input type="radio" name="approvalRequired"/>
+        <input type="checkbox" name="approvalRequired"/>
         <label>Approval Required</label><br/><br/>
         <input type="submit" value="Submit"/>
     </form>
