--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,6 +18,7 @@
             <form modelAttribute="loginData" method="POST" action="login">
                 <input type="text" name="username" placeholder="email"/>
                 <input type="password" name="password" placeholder="password"/>
+                <a th:href="@{/forgot_password}">forgot password</a></br></br>
                 <button type="submit" class="btn">Login</button>
             </form>
         </div>
