--- a/src/main/resources/templates/addFacility.html
+++ b/src/main/resources/templates/addFacility.html
@@ -42,6 +42,8 @@
         <input type="checkbox" name="approvalRequired"/>
         <label>Approval Required</label><br/><br/>
         <input type="submit" value="Submit"/>
+
+        <a th:href="@{/admin_dashboard}">home</a>
     </form>
 </body>
 </html>
