--- a/src/main/resources/templates/display_users.html
+++ b/src/main/resources/templates/display_users.html
@@ -43,13 +43,18 @@
                     <button onclick="adminFacility()" class="button">Facility</button>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    <a th:href="@{/admin_dashboard}">home</a>
+                </td>
+            </tr>
         </table>
     </div>
     <div class="column middle">
         <table border="1">
             <tr>
-                <th>name</th>
-                <th>age</th>
+                <th>Name</th>
+                <th>Role</th>
                 <th>Email</th>
                 <th>BannerID</th>
             </tr>
