--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -7,7 +7,7 @@
 </head>
 <body>
             <h3>Upload the CSV File </h3>
-            <form th:action="@{/admin/user_upload}"  method="post" enctype="multipart/form-data">
+            <form th:action="@{/user_upload}"  method="post" enctype="multipart/form-data">
                 <input id="singleFileUploadInput" type="file" th:name="file" required />
                 <button type="submit" class="primary submit-btn">Submit</button>
             </form>
