--- a/src/main/resources/templates/user_registration_form.html
+++ b/src/main/resources/templates/user_registration_form.html
@@ -29,6 +29,7 @@
         <div th:if="${message != null}">
             <p class="text-warning">[[${message}]]</p>
         </div>
+        <a th:href="@{/admin_dashboard}">home</a>
     </form>
 </div>
 </body>
