--- a/src/main/resources/templates/updateFacility.html
+++ b/src/main/resources/templates/updateFacility.html
@@ -42,7 +42,7 @@
     <label>Approval Required</label><br/><br/>
 
     <input type="submit" value="Update"/> <br/><br/>
-    <a th:href="@{/admin_dashboard}">home</a>
+    <a th:href="@{/facility}">home</a>
 </form>
 </body>
 </html>
