--- a/src/main/resources/templates/user_dashboard.html
+++ b/src/main/resources/templates/user_dashboard.html
@@ -20,6 +20,13 @@
                     <button onclick="displayFacility()" class="button">Facility</button>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    <form method="get" th:action="@{/booking}">
+                    <input type="submit" class="button" value="View Booking">
+                    </form>
+                </td>
+            </tr>
         </table>
     </div>
 </div>
