--- a/src/main/resources/templates/addFacility.html
+++ b/src/main/resources/templates/addFacility.html
@@ -43,7 +43,7 @@
         <label>Approval Required</label><br/><br/>
         <input type="submit" value="Submit"/>
 
-        <a th:href="@{/admin_dashboard}">home</a>
+        <a th:href="@{/facility}">home</a>
     </form>
 </body>
 </html>
