--- a/src/main/resources/templates/timing.html
+++ b/src/main/resources/templates/timing.html
@@ -31,7 +31,7 @@
     <br/>
     <button type="submit">Add timing</button>
     <br>
-    <a th:href="@{/manager_dashboard}">home</a><br>
+    <a th:href="@{/facility/display_manager_facility}">home</a><br>
 
     <table border="1">
         <tr>
