--- a/src/main/resources/templates/booking.html
+++ b/src/main/resources/templates/booking.html
@@ -5,6 +5,9 @@
     <title>Booking View</title>
 </head>
 <body>
+<form th:action="@{/logout}">
+    <input  type="submit" value="Logout" class="button">
+</form>
 <table border="1">
     <tr>
         <th>facilityId</th>
