--- a/src/main/resources/templates/display_user_facility.html
+++ b/src/main/resources/templates/display_user_facility.html
@@ -21,6 +21,13 @@
       </tr>
       <tr>
         <td>
+          <form th:action="@{/logout}">
+            <input  type="submit" value="Logout" class="button">
+          </form>
+        </td>
+      </tr>
+      <tr>
+        <td>
           <a th:href="@{/user_dashboard}">home</a>
         </td>
       </tr>
