--- a/src/main/resources/templates/admin_dashboard.html
+++ b/src/main/resources/templates/admin_dashboard.html
@@ -43,6 +43,13 @@
               <button onclick="adminFacility()" class="button">Facility</button>
             </td>
           </tr>
+          <tr>
+          <td>
+            <form th:action="@{/logout}">
+              <input  type="submit" value="Logout" class="button">
+            </form>
+          </td>
+          </tr>
         </table>
       </div>
     </div>
