--- a/src/main/resources/templates/displayFacility.html
+++ b/src/main/resources/templates/displayFacility.html
@@ -25,6 +25,13 @@
             </tr>
             <tr>
                 <td>
+                    <form th:action="@{/logout}">
+                        <input  type="submit" value="Logout" class="button">
+                    </form>
+                </td>
+            </tr>
+            <tr>
+                <td>
                     <a th:href="@{/admin_dashboard}">home</a>
                 </td>
             </tr>
