--- a/src/main/resources/templates/display_manager_facility.html
+++ b/src/main/resources/templates/display_manager_facility.html
@@ -26,6 +26,13 @@
                     <a th:href="@{/manager_dashboard}">home</a>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    <form th:action="@{/logout}">
+                        <input  type="submit" value="Logout" class="button">
+                    </form>
+                </td>
+            </tr>
         </table>
     </div>
     <div class="column middle">
