--- a/src/main/resources/templates/manager_dashboard.html
+++ b/src/main/resources/templates/manager_dashboard.html
@@ -20,6 +20,13 @@
                     <button onclick="displayFacility()" class="button">Facility</button>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    <form th:action="@{/logout}">
+                        <input  type="submit" value="Logout" class="button">
+                    </form>
+                </td>
+            </tr>
         </table>
     </div>
 </div>
