--- a/src/main/resources/templates/update_facility_manager.html
+++ b/src/main/resources/templates/update_facility_manager.html
@@ -11,6 +11,9 @@
 
 <body>
 
+        <form th:action="@{/logout}">
+            <input  type="submit" value="Logout" class="button">
+        </form>
 <form th:action="@{/facility/update/} + ${id}" modelAttribute="facility" method="POST" >
     <label>Facility Name:</label>
     <input type="text" name="name" th:value="${name}"/><br/>
