--- a/src/main/resources/templates/user_slot_display.html
+++ b/src/main/resources/templates/user_slot_display.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
-
-
+<form th:action="@{/logout}">
+    <input  type="submit" value="Logout" class="button">
+</form>
     <label>Facility Name:</label>
     <input type="text" name="name" th:value="${name}" readonly/><br/>
     <br/>
