--- a/src/main/resources/templates/display_manager_facility.html
+++ b/src/main/resources/templates/display_manager_facility.html
@@ -42,12 +42,18 @@
                 <th>description</th>
                 <th>location</th>
                 <th>occupancy</th>
+                <th>Duration</th>
+                <th>Active</th>
+                <th>Approval Required</th>
             </tr>
             <tr th:each = "facility: ${facility}">
                 <td th:text="${facility.name}"></td>
                 <td th:text="${facility.description}"></td>
                 <td th:text="${facility.location}"></td>
                 <td th:text="${facility.occupancy}"></td>
+                <td th:text="${facility.timeSlot}"></td>
+                <td th:text="${facility.active}"></td>
+                <td th:text="${facility.approvalRequired}"></td>
                 <td><a th:href="@{/facility/{id} (id=${facility.id})}">Edit</a></td>
                 <td><a th:href="@{/timing?facility_id={id} (id=${facility.id})}">Edit Timings</a></td>
                 <td><a th:href="@{/booking?facility_id={id} (id=${facility.id})}">Booking History</a></td>
