--- a/src/main/resources/templates/booking.html
+++ b/src/main/resources/templates/booking.html
@@ -23,10 +23,18 @@
         <td th:text="${booking.endTime}"></td>
         <td th:text="${booking.status}"></td>
 
-        <div th:if="${booking.status == T(com.csci5308.g17.booking.BookingStatus).CONFIRMED}">
+        <div th:if="${booking.status.toString() == 'CONFIRMED'}">
         <form method="post" th:action="@{/booking/{id}/cancel (id =${booking.id})}">
             <td><input type="submit" value="Cancel Booking"/></td>
         </form>
+        </div>
+        <div th:if="${booking.status.toString() == 'APPROVAL_PENDING' and isManager}">
+            <form method="post" th:action="@{/booking/{id}/approve (id =${booking.id})}">
+                <td><input type="submit" value="Approve"/></td>
+            </form>
+            <form method="post" th:action="@{/booking/{id}/deny (id =${booking.id})}">
+                <td><input type="submit" value="Deny"/></td>
+            </form>
         </div>
     </tr>
     <div th:if="${isManager}">
