--- a/src/main/resources/templates/verification_form.html
+++ b/src/main/resources/templates/verification_form.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div>
-    <h2>User Varification Form</h2>
+    <h2>User Verification Form</h2>
 </div>
 
 <form th:action="@{/verification_form}" method="post">
