--- a/src/main/resources/templates/addFacility.html
+++ b/src/main/resources/templates/addFacility.html
@@ -35,7 +35,7 @@
                 type="text"
                 name="managerEmail"
                 placeholder="Email" required/><br/><br/>
-        <label>Time slot duration</label>
+        <label>Time slot duration(minutes)</label>
         <input
                 type="text"
                 name="timeSlot"
