--- a/src/main/resources/templates/admin_dashboard.html
+++ b/src/main/resources/templates/admin_dashboard.html
@@ -16,7 +16,7 @@
         <tr>
           <td class="addUser">
             <form
-              th:action="@{/user_upload}"
+              action="/user_upload"
               method="post"
               enctype="multipart/form-data">
               <input type="file" th:name="file" required />
