--- a/src/main/resources/templates/displayFacility.html
+++ b/src/main/resources/templates/displayFacility.html
@@ -9,11 +9,10 @@
 </head>
 <body>
 <div class="header">
-    <h1>Facility List</h1>
+    <h1>Admin facility list</h1>
 </div>
 <div class="row">
     <div class="column side">
-        <h2>General</h2>
         <table>
             <tr>
                 <td><button onclick="displayUsers()"class="button">Users</button></td>
