--- a/src/main/resources/templates/display_manager_facility.html
+++ b/src/main/resources/templates/display_manager_facility.html
@@ -9,11 +9,10 @@
 </head>
 <body>
 <div th:action="@{/facility/display_manager_facility}" method="post" class="header">
-    <h1>Facility List</h1>
+    <h1>Manager facility list</h1>
 </div>
 <div class="row">
     <div class="column side">
-        <h2>General</h2>
         <table>
 
             <tr>
