--- a/src/main/resources/templates/display_user_facility.html
+++ b/src/main/resources/templates/display_user_facility.html
@@ -8,10 +8,9 @@
 
 </head>
 <body>
-<div  class="header"><h1>Facility List</h1></div>
+<div  class="header"><h1>User facility list</h1></div>
 <div class="row">
   <div class="column side">
-    <h2>General</h2>
     <table>
 
       <tr>
@@ -41,6 +40,7 @@
         <th>location</th>
         <th>manager</th>
         <th>occupancy</th>
+        <th>approval required</th>
 
       </tr>
       <tr th:if="${facility.active}" th:each = "facility: ${facilities}">
@@ -49,6 +49,7 @@
         <td th:text="${facility.location}"></td>
         <td th:text="${facility.managerEmail}"></td>
         <td th:text="${facility.occupancy}"></td>
+        <td th:text="${facility.approvalRequired}"></td>
         <td><a th:href="@{/facility/{id} (id=${facility.id})}">Book</a></td>
       </tr>
     </table>
